# vidtonerf

./: .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  ColmapRunner.py  Contributing.md  ImagePositionExtractor.py  LICENSE  README.md  README_diagram.md  README_guide.md  SSH_SETUP.md  docker-compose.yml  docker-compose_gaussian.yml  empty_data.sh  mypy.ini  pyproject.toml  requirements.txt  userid.py
TensoRF/: .gitignore  Dockerfile  README.md  fileServer.py  gpu.Dockerfile  log.py  main.py  opt.py  renderer.py  requirements.txt  train.py  utils.py  worker.py
TensoRF/configs/: drums.txt  lego.txt  localworkerconfig.txt  workerconfig.txt  (+1 more)
annie_status_updates/: Update1.txt  Update2.txt
box/: cameras.txt  images.txt.REMOVED.git-id  points3D.txt.REMOVED.git-id  project.ini
colmap/: .gitignore  Dockerfile  README.md  cameras.txt  collisions.py  colmap2data_anthony.py  colmap_runner.py  colmap_tests.py  colmap_worker_unit_tests.py  data2matrix_annie.py  debug.py  docker-compose.yml  gabe_test_images.py  gen_cam.py  gen_point.csv  image_position_extractor.py  images.csv  log.py  main.py  matrix.py  opt.py  out_matrix.txt  output.csv  parse_data.py  parsed_data.csv  points3D.txt  requirements.txt  status.py  to_cam.py  video_to_images.py
colmap_sfm_annie/: colmap_resource_pg.txt
documentation/: my_notes.txt
dummy_external_server/: argparser.py  main.py  rabbitmq_reader.py  sfm_main.py  sfm_server.py  webserver.py
gaussian_splatting_reduced/: .gitignore  Dependency_Testing.md  Dockerfile  Dockerfile_multistage  Dockerfile_noconda  Dockerfile_singlestage  NOrNtoGS_sfm.py  entry_point.sh  environment.yml  environment_nopip.yml  log.py  main.py  render.py  requirements.txt  train.py  transforms_train.json
models/: sfm.py
pytesting/: test.py
vnev/: pyvenv.cfg
web-server/: .gitignore  Brewfile  DOCKER-COMPOSE-SETUP.md  Dockerfile  INSTALL.md  LOGLEVELS.md  README.md  app.py  argparser.py  controller.py  controllertest.py  docker-compose.yml  emptytest.py  emptytester.py  log.py  main.py  requirements.txt  webserver.py  webserver_model.md
website/: index.html
(+48 files in other folders)
