[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vidtonerf"
authors = [
	{ name = "Eric Nelson" },
	{ name = "Amaan Qureshi", email = "amaanq12@gmail.com" },
]
license = { text = "MIT" }
description = "Backend for the NeRf (Neural Radiance Fields) or Nothing web application"
keywords = [
	"nerf",
	"nerf or nothing",
	"tensorf",
	"vidtonerf",
	"colmap",
	"sfm",
	"neural radiance fields",
]
readme = "README.md"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"Framework :: Flake8",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.7"
dependencies = [
	"click >= 8.1.3",
	"flake8 >= 3.0.0",
	"flask >= 2.1.2",
	"itsdangerous >= 2.1.2",
	"jinja2 >= 3.1.2",
	"markupsafe >= 2.1.1",
	"numpy >= 1.23.0",
	"pika >= 1.3.0",
	"pymongo >= 4.1.1",
	"requests >= 2.28.1",
	"Werkzeug >= 2.1.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/NeRF-or-Nothing/vidtonerf"

[project.entry-points]
"flake8.extension" = { B = "bugbear:BugBearChecker" }

[project.optional-dependencies]
dev = [
	"tox",
	"coverage",
	"hypothesis",
	"hypothesmith>=0.2",
	"pre-commit",
	"pytest",
]

[tool.setuptools]
py-modules = ["bugbear"]
zip-safe = false
# test-suite = "tests.test_bugbear"  # Deprecated since setuptools v41.5.0
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "bugbear.__version__" }

[tool.isort]
profile = "black"
